Creating html structure

--- a/index.html
+++ b/index.html
@@ -10,11 +10,50 @@
     <header>
         <h1>Willkommen auf meiner Website</h1>
         <nav>
-            <a href="#aboutme">About Me</a>
-            <a href="#background">Background</a>
-            <a href="#skills">Skills</a>
-            <a href="#lookingfor">Looking For</a>
+        <ul>
+            <a href="#interessen">Interessen</a>
+            <a href="#kontakt">Kontakt</a>
+            <a href="#links">Links</a>
+            <a href="#übermich">Über mich</a>
+            <a href="#cv">Lebenslauf</a>
+        </ul>
         </nav>
-    </header>    
+    </header> 
+
+    <main>
+        <section id="foto">
+            <h2>That´s me</h2>
+            <img src="./images/frederikemeer.jpg" alt="Frederike mit Hund am Meer" width="70%">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis! Saepe error provident voluptatem. Quasi excepturi atque tempora incidunt ducimus aut veniam, recusandae ab optio distinctio molestias officia voluptatem? Omnis?
+            </p>
+        </section>
+        <section id="interessen">
+            <h2>Interessen</h2>
+            <h2>Skills</h2>
+        </section>
+        <section id="kontakt">
+            <h2>Kontakt</h2> 
+        </section>
+        <section id="links">
+            <h2>Let´s connect!</h2>
+            <img src="./images/github.jpg" alt="">
+            <img src="./images/codepen.jpg" alt="">
+            <img src="./images/linkedin.jpg" alt="">
+        </section>
+        <section id="übermich">
+            <h2>Über mich</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae dolor, sapiente fugiat iste distinctio tempore quo modi odio reprehenderit rerum culpa quaerat repellat consequuntur autem sed impedit tenetur unde?
+            </p>
+        </section>
+        <section id="cv">
+            <h2>Lebenslauf</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae dolor, sapiente fugiat iste distinctio tempore quo modi odio reprehenderit rerum culpa quaerat repellat consequuntur autem sed impedit tenetur unde?
+            </p>
+        </section>
+    </main>
+
 </body>
+<footer>
+    <p>© Copyright 2021 by Frederike Bründermann.</p>
+</footer>
 </html>
