Adding interests and skills

--- a/index.html
+++ b/index.html
@@ -29,7 +29,17 @@
         </section>
         <section id="interessen">
             <h2>Interessen</h2>
+            <ul>
+                <li>Digital Marketing</li>
+                <li>Festivals & Konzerte</li>
+                <li>Camping & VanLife</li>
+                <li>Family & Friends</li>
+            </ul>
             <h2>Skills</h2>
+            <li>Social Media Management</li>
+            <li>Content Marketing</li>
+            <li>Projekt Management</li>
+            <li>Performance Marketing</li>
         </section>
         <section id="kontakt">
             <h2>Kontakt</h2> 
