--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
                 <li>Family & Friends</li>
             </ul>
             <h2>Skills</h2>
-            <li>Social Media Management</li>
-            <li>Content Marketing</li>
-            <li>Projekt Management</li>
-            <li>Performance Marketing</li>
+            <ul>
+                <li>Social Media Management</li>
+                <li>Content Marketing</li>
+                <li>Projekt Management</li>
+                <li>Performance Marketing</li>
+            </ul>
         </section>
         <section id="kontakt">
             <h2>Kontakt</h2> 
@@ -57,8 +59,32 @@
         </section>
         <section id="cv">
             <h2>Lebenslauf</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae dolor, sapiente fugiat iste distinctio tempore quo modi odio reprehenderit rerum culpa quaerat repellat consequuntur autem sed impedit tenetur unde?
-            </p>
+            <table>
+                <tr>
+                    <td>2019 - 2021</td>
+                    <td>Project Manager Online Marketing <strong>@justZARGEScommunicate!</strong></td>
+                </tr>
+                <tr>
+                    <td>2019</td>
+                    <td>Senior Account Manager Fashion <strong>@Wiethe Group GmbH</strong></td>
+                </tr>
+                <tr>
+                    <td>2016 - 2018</td>
+                    <td>Social Media Managerin <strong>@VideoART GmbH</strong></td>
+                </tr>
+                <tr>
+                    <td>2013 - 2015</td>
+                    <td>Marketing Manager Marktplätze <strong>@Ulla Popken GmbH</strong></td>
+                </tr>
+                <tr>
+                    <td>2013 - 2015</td>
+                    <td>Master Media Management & Entrepreneurship <strong>@Hochschule Fresenius</strong></td>
+                </tr>
+                <tr>
+                    <td>2009 - 2012</td>
+                    <td>Bachelor Busines Management & Marketing <strong>@EMBA Hamburg</strong></td> 
+                </tr>                   
+        </table>
         </section>
     </main>
 
