Formating CV & Footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#interessen">Interessen</a>
             <a href="#kontakt">Kontakt</a>
             <a href="#links">Links</a>
-            <a href="#übermich">Über mich</a>
+            <a href="#bio">Biografie</a>
             <a href="#cv">Lebenslauf</a>
         </ul>
         </nav>
@@ -52,8 +52,8 @@
             <img src="./images/codepen.jpg" alt="">
             <img src="./images/linkedin.jpg" alt="">
         </section>
-        <section id="übermich">
-            <h2>Über mich</h2>
+        <section id="bio">
+            <h2>Biografie</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae dolor, sapiente fugiat iste distinctio tempore quo modi odio reprehenderit rerum culpa quaerat repellat consequuntur autem sed impedit tenetur unde?
             </p>
         </section>
@@ -61,23 +61,23 @@
             <h2>Lebenslauf</h2>
             <table>
                 <tr>
-                    <td>2019 - 2021</td>
+                    <td>2019 - 2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
                     <td>Project Manager Online Marketing <strong>@justZARGEScommunicate!</strong></td>
                 </tr>
                 <tr>
-                    <td>2019</td>
+                    <td>2019          </td>
                     <td>Senior Account Manager Fashion <strong>@Wiethe Group GmbH</strong></td>
                 </tr>
                 <tr>
-                    <td>2016 - 2018</td>
+                    <td>2016 - 2018   </td>
                     <td>Social Media Managerin <strong>@VideoART GmbH</strong></td>
                 </tr>
                 <tr>
-                    <td>2013 - 2015</td>
+                    <td>2013 - 2015   </td>
                     <td>Marketing Manager Marktplätze <strong>@Ulla Popken GmbH</strong></td>
                 </tr>
                 <tr>
-                    <td>2013 - 2015</td>
+                    <td>2013 - 2015   </td>
                     <td>Master Media Management & Entrepreneurship <strong>@Hochschule Fresenius</strong></td>
                 </tr>
                 <tr>
@@ -90,6 +90,6 @@
 
 </body>
 <footer>
-    <p>© Copyright 2021 by Frederike Bründermann.</p>
+    <p><small>© Copyright 2021 by Frederike Bründermann.</small></p>
 </footer>
 </html>
