--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
         <h1>Willkommen auf meiner Website</h1>
         <nav>
         <ul>
-            <a href="#interessen">Interessen</a>
             <a href="#kontakt">Kontakt</a>
-            <a href="#links">Links</a>
             <a href="#bio">Biografie</a>
-            <a href="#cv">Lebenslauf</a>
         </ul>
         </nav>
     </header> 
@@ -23,10 +20,12 @@
     <main>
         <section id="foto">
             <h2>That´s me</h2>
-            <img src="./images/frederikemeer.jpg" alt="Frederike mit Hund am Meer" width="70%">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, veritatis! Saepe error provident voluptatem. Quasi excepturi atque tempora incidunt ducimus aut veniam, recusandae ab optio distinctio molestias officia voluptatem? Omnis?
-            </p>
+            <figure>
+                <img src="./images/frederikemeer.jpg" alt="Frederike mit Hund am Meer" width="70%">
+                <figcaption>Mein Hund Kurt und ich an der Nordsee, Sommer 2019</figcaption>
+            </figure>
         </section>
+
         <section id="interessen">
             <h2>Interessen</h2>
             <ul>
@@ -43,20 +42,24 @@
                 <li>Performance Marketing</li>
             </ul>
         </section>
+
         <section id="kontakt">
             <h2>Kontakt</h2> 
+            <p>Mail: <a href="mailto:frederike@bruendermann.de">frederike@bruendermann.de</a>
+            </p>
+            <p>Phone: <a href="tel:+491786353411">+49 178 6353411</a></p>
         </section>
+
         <section id="links">
             <h2>Let´s connect!</h2>
-            <img src="./images/github.jpg" alt="">
-            <img src="./images/codepen.jpg" alt="">
-            <img src="./images/linkedin.jpg" alt="">
+
         </section>
         <section id="bio">
             <h2>Biografie</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae dolor, sapiente fugiat iste distinctio tempore quo modi odio reprehenderit rerum culpa quaerat repellat consequuntur autem sed impedit tenetur unde?
             </p>
         </section>
+
         <section id="cv">
             <h2>Lebenslauf</h2>
             <table>
@@ -86,6 +89,7 @@
                 </tr>                   
         </table>
         </section>
+        
     </main>
 
 </body>
