Addind Social Links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="foto">
             <h2>That´s me</h2>
             <figure>
-                <img src="./images/frederikemeer.jpg" alt="Frederike mit Hund am Meer" width="70%">
+                <img src="./images/frederikemeer.jpg" alt="Frau und Hund in Nahaufnahme mit Meer im Hintergrund." width="70%">
                 <figcaption>Mein Hund Kurt und ich an der Nordsee, Sommer 2019</figcaption>
             </figure>
         </section>
@@ -52,7 +52,11 @@
 
         <section id="links">
             <h2>Let´s connect!</h2>
-
+            <p>
+                <a href="https://www.linkedin.com/in/frederikebründermann/">@LinkedIn</a><br>
+                <a href="https://github.com/frederikebruendermann">@GitHub</a><br>
+                <a href="https://codepen.io/FrederikeB">@CodePen</a>
+            </p>
         </section>
         <section id="bio">
             <h2>Biografie</h2>
@@ -89,7 +93,7 @@
                 </tr>                   
         </table>
         </section>
-        
+
     </main>
 
 </body>
