Delete Alt Text Bild

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section id="foto">
             <h2>That´s me</h2>
             <figure>
-                <img src="./images/frederikemeer.jpg" alt="Frau und Hund in Nahaufnahme mit Meer im Hintergrund." width="70%">
+                <img src="./images/frederikemeer.jpg" alt="" width="70%">
                 <figcaption>Mein Hund Kurt und ich an der Nordsee, Sommer 2019</figcaption>
             </figure>
         </section>
