Optimate Strukture via prettier

--- a/index.html
+++ b/index.html
@@ -1,105 +1,127 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Website</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Willkommen auf meiner Website</h1>
-        <nav>
-            <a href="#kontakt">Kontakt</a>
-            <a href="#bio">Biografie</a>
-        </nav>
-    </header> 
+      <h1>Willkommen auf meiner Website</h1>
+      <nav>
+        <a href="#kontakt">Kontakt</a>
+        <a href="#bio">Biografie</a>
+      </nav>
+    </header>
 
     <main>
-        <section id="foto">
-            <h2>That´s me</h2>
-            <figure>
-                <img src="./images/frederikemeer.jpg" alt="" width="70%">
-                <figcaption>Mein Hund Kurt und ich an der Nordsee, Sommer 2019</figcaption>
-            </figure>
-        </section>
+      <section id="foto">
+        <h2>That´s me</h2>
+        <figure>
+          <img src="./images/frederikemeer.jpg" alt="" width="70%" />
+          <figcaption>
+            Mein Hund Kurt und ich an der Nordsee, Sommer 2019
+          </figcaption>
+        </figure>
+      </section>
 
-        <section id="interessen">
-            <h2>Interessen</h2>
-            <ul>
-                <li>Digital Marketing</li>
-                <li>Festivals & Konzerte</li>
-                <li>Camping & VanLife</li>
-                <li>Family & Friends</li>
-            </ul>
-            <h2>Skills</h2>
-            <ul>
-                <li>Social Media Management</li>
-                <li>Content Marketing</li>
-                <li>Projekt Management</li>
-                <li>Performance Marketing</li>
-            </ul>
-        </section>
+      <section id="interessen">
+        <h2>Interessen</h2>
+        <ul>
+          <li>Digital Marketing</li>
+          <li>Festivals & Konzerte</li>
+          <li>Camping & VanLife</li>
+          <li>Family & Friends</li>
+        </ul>
+        <h2>Skills</h2>
+        <ul>
+          <li>Social Media Management</li>
+          <li>Content Marketing</li>
+          <li>Projekt Management</li>
+          <li>Performance Marketing</li>
+        </ul>
+      </section>
 
-        <section id="kontakt">
-            <h2>Kontakt</h2> 
-            <p>Mail: <a href="mailto:frederike@bruendermann.de">frederike@bruendermann.de</a>
-            </p>
-            <p>Phone: <a href="tel:+491786353411">+49 178 6353411</a></p>
-        </section>
+      <section id="kontakt">
+        <h2>Kontakt</h2>
+        <p>
+          Mail:
+          <a href="mailto:frederike@bruendermann.de"
+            >frederike@bruendermann.de</a
+          >
+        </p>
+        <p>Phone: <a href="tel:+491786353411">+49 178 6353411</a></p>
+      </section>
 
-        <section id="links">
-            <h2>Let´s connect!</h2>
-            <p>
-                <a href="https://www.linkedin.com/in/frederikebründermann/">@LinkedIn</a><br>
-                <a href="https://github.com/frederikebruendermann">@GitHub</a><br>
-                <a href="https://codepen.io/FrederikeB">@CodePen</a>
-            </p>
-        </section>
+      <section id="links">
+        <h2>Let´s connect!</h2>
+        <p>
+          <a href="https://www.linkedin.com/in/frederikebründermann/"
+            >@LinkedIn</a
+          ><br />
+          <a href="https://github.com/frederikebruendermann">@GitHub</a><br />
+          <a href="https://codepen.io/FrederikeB">@CodePen</a>
+        </p>
+      </section>
 
-        <section id="bio">
-            <h2>Biografie</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae dolor, sapiente fugiat iste distinctio tempore quo modi odio reprehenderit rerum culpa quaerat repellat consequuntur autem sed impedit tenetur unde?
-            </p>
-        </section>
+      <section id="bio">
+        <h2>Biografie</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id beatae
+          dolor, sapiente fugiat iste distinctio tempore quo modi odio
+          reprehenderit rerum culpa quaerat repellat consequuntur autem sed
+          impedit tenetur unde?
+        </p>
+      </section>
 
-        <section id="cv">
-            <h2>Lebenslauf</h2>
-            <table>
-                <tr>
-                    <td>2019 - 2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                    <td>Project Manager Online Marketing <strong>@justZARGEScommunicate!</strong></td>
-                </tr>
-                <tr>
-                    <td>2019          </td>
-                    <td>Senior Account Manager Fashion <strong>@Wiethe Group GmbH</strong></td>
-                </tr>
-                <tr>
-                    <td>2016 - 2018   </td>
-                    <td>Social Media Managerin <strong>@VideoART GmbH</strong></td>
-                </tr>
-                <tr>
-                    <td>2013 - 2015   </td>
-                    <td>Marketing Manager Marktplätze <strong>@Ulla Popken GmbH</strong></td>
-                </tr>
-                <tr>
-                    <td>2013 - 2015   </td>
-                    <td>Master Media Management & Entrepreneurship <strong>@Hochschule Fresenius</strong></td>
-                </tr>
-                <tr>^
-                    <td>2009 - 2012</td>
-                    <td>Bachelor Busines Management & Marketing <strong>@EMBA Hamburg</strong></td> 
-                </tr>                   
-            </table>
-        </section>
-
+      <section id="cv">
+        <h2>Lebenslauf</h2>
+        <table>
+          <tr>
+            <td>2019 - 2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td>
+              Project Manager Online Marketing
+              <strong>@justZARGEScommunicate!</strong>
+            </td>
+          </tr>
+          <tr>
+            <td>2019</td>
+            <td>
+              Senior Account Manager Fashion <strong>@Wiethe Group GmbH</strong>
+            </td>
+          </tr>
+          <tr>
+            <td>2016 - 2018</td>
+            <td>Social Media Managerin <strong>@VideoART GmbH</strong></td>
+          </tr>
+          <tr>
+            <td>2013 - 2015</td>
+            <td>
+              Marketing Manager Marktplätze <strong>@Ulla Popken GmbH</strong>
+            </td>
+          </tr>
+          <tr>
+            <td>2013 - 2015</td>
+            <td>
+              Master Media Management & Entrepreneurship
+              <strong>@Hochschule Fresenius</strong>
+            </td>
+          </tr>
+          <tr>
+            <td>2009 - 2012</td>
+            <td>
+              Bachelor Busines Management & Marketing
+              <strong>@EMBA Hamburg</strong>
+            </td>
+          </tr>
+        </table>
+      </section>
     </main>
+  </body>
 
-</body>
-
-<footer>
+  <footer>
     <p><small>© Copyright 2021 by Frederike Bründermann.</small></p>
-</footer>
-
+  </footer>
 </html>
