--- a/index.html
+++ b/index.html
@@ -46,24 +46,19 @@
 
       <section id="kontakt">
         <h2>Kontakt</h2>
-        <p>
-          Mail:
-          <a href="mailto:frederike@bruendermann.de"
-            >frederike@bruendermann.de</a
-          >
-        </p>
-        <p>Phone: <a href="tel:+491786353411">+49 178 6353411</a></p>
+
+        Mail:
+        <a href="mailto:frederike@bruendermann.de">frederike@bruendermann.de</a>
+        <br />
+        Phone: <a href="tel:+491786353411">+49 178 6353411</a>
       </section>
 
       <section id="links">
         <h2>Let´s connect!</h2>
-        <p>
-          <a href="https://www.linkedin.com/in/frederikebründermann/"
-            >@LinkedIn</a
-          ><br />
-          <a href="https://github.com/frederikebruendermann">@GitHub</a><br />
-          <a href="https://codepen.io/FrederikeB">@CodePen</a>
-        </p>
+        <a href="https://www.linkedin.com/in/frederikebründermann/">@LinkedIn</a
+        ><br />
+        <a href="https://github.com/frederikebruendermann">@GitHub</a><br />
+        <a href="https://codepen.io/FrederikeB">@CodePen</a>
       </section>
 
       <section id="bio">
