--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <picture>
             <source media="(max-width: 599px)" srcset="/images/frederikeamSchreibtisch.jpg"/>
             <source media="(min-width 600px)" srcset="/images/frederikemeer.jpg"/>
-            <img src="/images/frederikemeer.jpg"/>
+            <img src="/images/frederikemeer.jpg" alt=""/>
       </picture>
      
       <div>
@@ -47,22 +47,6 @@
         </ul>
       </section>
     </div>
-    
-      <section id="kontakt">
-        <h2>Kontakt</h2>
-
-        <a href="mailto:frederike@bruendermann.de">✉️ frederike@bruendermann.de</a>
-        <br />
-        <a href="tel:+491786353411">📞 +49 178 6353411</a>
-      </section>
-
-      <section id="links">
-        <h2>Let´s connect!</h2>
-        <a href="https://www.linkedin.com/in/frederikebründermann/" rel="noopener noreferrer">@LinkedIn</a
-        ><br />
-        <a href="https://github.com/frederikebruendermann" rel="noopener noreferrer">@GitHub</a><br />
-        <a href="https://codepen.io/FrederikeB" rel="noopener noreferrer">@CodePen</a>
-      </section>
 
       <section id="bio">
         <h2>Biografie</h2>
@@ -73,46 +57,49 @@
 
       <section id="cv">
         <h2>Lebenslauf</h2>
-        <table>
-          <tr>
-            <td>2019 - 2021&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td>
-              Project Manager Online Marketing
-              <strong>@justZARGEScommunicate!</strong>
-            </td>
-          </tr>
-          <tr>
-            <td>2019</td>
-            <td>
-              Senior Account Manager Fashion <strong>@Wiethe Group GmbH</strong>
-            </td>
-          </tr>
-          <tr>
-            <td>2016 - 2018</td>
-            <td>Social Media Managerin <strong>@VideoART GmbH</strong></td>
-          </tr>
-          <tr>
-            <td>2013 - 2015</td>
-            <td>
-              Marketing Manager Marktplätze <strong>@Ulla Popken GmbH</strong>
-            </td>
-          </tr>
-          <tr>
-            <td>2013 - 2015</td>
-            <td>
-              Master Media Management & Entrepreneurship
-              <strong>@Hochschule Fresenius</strong>
-            </td>
-          </tr>
-          <tr>
-            <td>2009 - 2012</td>
-            <td>
-              Bachelor Busines Management & Marketing
-              <strong>@EMBA Hamburg</strong>
-            </td>
-          </tr>
-        </table>
+        <dl>
+            <dt>2019-2021</dt> 
+            <dd>Project Manager Online Marketing </dd>
+            <dd>@ justZARGEScommunicate!</dd><br>
+
+            <dt>2019<br></dt>
+            <dd>Senior Account Manager Fashion <br></dd>
+            <dd>@ Wiethe Group GmbH</dd><br>
+
+            <dt>2016 - 2018 <br></dt>
+            <dd>Social Media Managerin<br></dd>
+            <dd>@ VideoART GmbH</dd><br>
+
+            <dt>2013 - 2015<br></dt>
+            <dd>Marketing Manager Marktplätze <br></dd>
+            <dd>@ Ulla Popken GmbH</dd><br>
+
+            <dt>2013 - 2015<br></dt>
+            <dd>Master Media Management & Entrepreneurship<br></dd>
+            <dd>@ Hochschule Fresenius</dd><br>
+
+            <dt>2009 - 2012<br></dt>
+            <dd>Bachelor Busines Management & Marketing<br></dd>
+            <dd>@ Hochschule Mittweida</dd>
+            </dl>
       </section>
+
+    <div class="container"
+        <section class="social">
+            <h2>Let´s connect!</h2>
+            <a href="https://www.linkedin.com/in/frederikebründermann/" rel="noopener noreferrer">@LinkedIn</a
+            ><br />
+            <a href="https://github.com/frederikebruendermann" rel="noopener noreferrer">@GitHub</a><br />
+            <a href="https://codepen.io/FrederikeB" rel="noopener noreferrer">@CodePen</a>
+        </section>
+
+        <section class="kontakt">
+            <h2>Kontakt</h2>
+            <a href="mailto:frederike@bruendermann.de">✉️ frederike@bruendermann.de</a>
+            <br />
+            <a href="tel:+491786353411">📞 +49 178 6353411</a>
+        </div>
+    </div>  
     </main>
   </body>
 
