Add Social Logos and Update Structure Bio

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <main>
       <picture>
-            <source media="(max-width: 599px)" srcset="/images/frederikeamSchreibtisch.jpg"/>
-            <source media="(min-width 600px)" srcset="/images/frederikemeer.jpg"/>
+            <source media="(max-width: 599px)" src="/images/frederikeamSchreibtisch.jpg"/>
+            <source media="(min-width 600px)" src="/images/frederikemeer.jpg"/>
             <img src="/images/frederikemeer.jpg" alt=""/>
       </picture>
      
@@ -48,7 +48,16 @@
       </section>
     </div>
 
-      <section id="bio">
+    <section class="social">
+        <h2>Let´s connect!</h2>
+        <div class="social-box">
+            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a><br />
+            <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a><br />
+            <a href="https://codepen.io/FrederikeB"><img class="logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
+        </div>
+    </section>
+
+      <section class="bio">
         <h2>Biografie</h2>
         <p>
           Nach meinem Marketing- & Medienmanagment Studium in der wunderschönen Stadt Hamburg habe ich in verschieden Agenturen und Positionen die Welt des On- und Offline Marketings kennengelernt.  
@@ -84,22 +93,14 @@
             </dl>
       </section>
 
-    <div class="container"
-        <section class="social">
-            <h2>Let´s connect!</h2>
-            <a href="https://www.linkedin.com/in/frederikebründermann/" rel="noopener noreferrer">@LinkedIn</a
-            ><br />
-            <a href="https://github.com/frederikebruendermann" rel="noopener noreferrer">@GitHub</a><br />
-            <a href="https://codepen.io/FrederikeB" rel="noopener noreferrer">@CodePen</a>
-        </section>
-
         <section class="kontakt">
             <h2>Kontakt</h2>
             <a href="mailto:frederike@bruendermann.de">✉️ frederike@bruendermann.de</a>
             <br />
-            <a href="tel:+491786353411">📞 +49 178 6353411</a>
-        </div>
-    </div>  
+            <a href="tel:+491786353411">📞 +49 178 6353411</a><br>
+            📍 Bremen
+        </section>
+
     </main>
   </body>
 
