--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet"> 
   </head>
 
   <body>
@@ -21,13 +21,13 @@
 
     <main>
       <picture>
-            <source media="(max-width: 599px)" src="/images/frederikeamSchreibtisch.jpg"/>
-            <source media="(min-width 600px)" src="/images/frederikemeer.jpg"/>
-            <img src="/images/frederikemeer.jpg" alt=""/>
+            <source media="(max-width: 599px)" src="images/FrederikeamSchreibtisch.JPG"/>
+            <source media="(min-width 600px)" src="images/frederikemeer.JPG">
+            <img src="images/frederikemeer.JPG" alt=""/>
       </picture>
      
       <div>
-      <section id="interessen">
+      <section class="interessen">
         <h2>Interessen</h2>
         <ul>
           <li>Digital Marketing</li>
@@ -37,7 +37,7 @@
         </ul>
       </section>
 
-        <section id="skills">
+        <section class="skills">
         <h2>Skills</h2>
         <ul>
           <li>Social Media Management</li>
@@ -49,10 +49,10 @@
     </div>
 
     <section class="social">
-        <h2>Let´s connect!</h2>
+        <h2>Let´s connect!&nbsp;&nbsp;&nbsp;</h2>
         <div class="social-box">
-            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a><br />
-            <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a><br />
+            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
+            <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
             <a href="https://codepen.io/FrederikeB"><img class="logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
         </div>
     </section>
@@ -105,6 +105,6 @@
   </body>
 
   <footer>
-    <p><small>© Copyright 2021 by Frederike Bründermann.</small></p>
+    <p><small></small>© Copyright 2021 by Frederike Bründermann.</small></p>
   </footer>
 </html>
