Correct Nav Design and CV

--- a/index.html
+++ b/index.html
@@ -48,14 +48,6 @@
       </section>
     </div>
 
-    <section class="social">
-        <h2>Let´s connect!&nbsp;&nbsp;&nbsp;</h2>
-        <div class="social-box">
-            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
-            <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
-            <a href="https://codepen.io/FrederikeB"><img class="logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
-        </div>
-    </section>
 
       <section class="bio">
         <h2>Biografie</h2>
@@ -64,7 +56,16 @@
         </p>
       </section>
 
-      <section id="cv">
+      <section class="social">
+        <h2>Let´s connect!&nbsp;&nbsp;&nbsp;</h2>
+        <div class="social-box">
+            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
+            <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
+            <a href="https://codepen.io/FrederikeB"><img class="logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
+        </div>
+    </section>
+
+      <section class="cv">
         <h2>Lebenslauf</h2>
         <dl>
             <dt>2019-2021</dt> 
@@ -84,11 +85,13 @@
             <dd>@ Ulla Popken GmbH</dd><br>
 
             <dt>2013 - 2015<br></dt>
-            <dd>Master Media Management & Entrepreneurship<br></dd>
+            <dd>Master Media Management <br> </dd>
+            <dd>& Entrepreneurship<br></dd>
             <dd>@ Hochschule Fresenius</dd><br>
 
             <dt>2009 - 2012<br></dt>
-            <dd>Bachelor Busines Management & Marketing<br></dd>
+            <dd>Bachelor Busines Management <br> </dd>
+            <dd>& Marketing<br></dd>
             <dd>@ Hochschule Mittweida</dd>
             </dl>
       </section>
