Update CSS File: A, Footer, Kontakt

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
       <h1>Frederike Bründermann</h1>
       <nav>
-        <a href="#kontakt">Kontakt</a>
-        <a href="#bio">Biografie</a>
+        <a href="#kontakt">KONTAKT</a>
+        <a href="#bio">BIOGRAFIE</a>
        </nav>
     </header>
 
