--- a/index.html
+++ b/index.html
@@ -27,36 +27,38 @@
       </picture>
      
       <div>
-      <section class="interessen">
+      <section id="interessen">
         <h2>Interessen</h2>
         <ul>
           <li>Digital Marketing</li>
           <li>Festivals & Konzerte</li>
-          <li>Camping & VanLife</li>
           <li>Family & Friends</li>
+          <li>VanLife</li>
         </ul>
       </section>
 
-        <section class="skills">
+        <section id="skills">
         <h2>Skills</h2>
         <ul>
           <li>Social Media Management</li>
           <li>Content Marketing</li>
           <li>Projekt Management</li>
           <li>Performance Marketing</li>
+          <li>Kreativität, Flexibilität <br> & starke Eigenmotivation </li>
         </ul>
       </section>
     </div>
 
-
-      <section class="bio">
+      <section id="bio">
         <h2>Biografie</h2>
         <p>
-          Nach meinem Marketing- & Medienmanagment Studium in der wunderschönen Stadt Hamburg habe ich in verschieden Agenturen und Positionen die Welt des On- und Offline Marketings kennengelernt.  
-        </p>
+            Im Anschluss an mein Marketing- & Medienmanagment Studium bin ich in verschiedenen Agenturen tief in die Welt des On- und Offline Marketings eingetaucht. Thematisch habe ich in den letzten Jahren namhafte Kunden in den Bereichen Medizin, Fashion und Tourismus betreut. 
+            <br>  
+            <br> 
+            Auf der Suche nach neuen beruflichen Herausforderungen und Perspektiven bin ich im Herbst 2020 auf <a href="https://www.neuefische.de" alt="" rel="noopener noreferrer" target="_blank"> neue fische </a> aufmerksam geworden. Mit Programmierung kam ich - bei E-Mail Newslettern, bei der Betreuung von Kunden Websites etc. - während meiner gesamten Laufbahn immer wieder in Kontakt. In der beruflichen Position zur Steuerung der Projekte und strategischer Beratung war jedoch, trotz großem Interesse, nie die Zeit sich tiefergehend mit der Materie zu beschäftigen, geschweige denn die Fähigkeiten zu lernen. Doch das ist nun anders! Ich nehme mir die Zeit mich in einem 3-monatigen Bootcamp zum Web Developer ausbilden zu lassen.<br> <br> <strong>Mein Ziel? - Marketing & Web Development verknüpfen, um die Synergieeffekte mit größmöglichem Output zu nutzen!</strong>         </p>
       </section>
 
-      <section class="social">
+      <section id="social">
         <h2>Let´s connect!&nbsp;&nbsp;&nbsp;</h2>
         <div class="social-box">
             <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
@@ -65,10 +67,10 @@
         </div>
     </section>
 
-      <section class="cv">
+      <section id="cv">
         <h2>Lebenslauf</h2>
         <dl>
-            <dt>2019-2021</dt> 
+            <dt>2019 - 2021</dt> 
             <dd>Project Manager Online Marketing </dd>
             <dd>@ justZARGEScommunicate!</dd><br>
 
@@ -96,7 +98,7 @@
             </dl>
       </section>
 
-        <section class="kontakt">
+        <section id="kontakt">
             <h2>Kontakt</h2>
             <a href="mailto:frederike@bruendermann.de">✉️ frederike@bruendermann.de</a>
             <br />
