--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li>Kreativität, Flexibilität <br> & starke Eigenmotivation </li>
         </ul>
       </section>
-    </div>
+      </div>
 
       <section id="bio">
         <h2>Biografie</h2>
@@ -59,7 +59,7 @@
       </section>
 
       <section id="social">
-        <h2>Let´s connect!&nbsp;&nbsp;&nbsp;</h2>
+        <h2>Let´s&nbsp;connect!&nbsp;&nbsp;&nbsp;</h2>
         <div class="social-box">
             <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
             <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
