Update regarding feedback

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       </section>
 
       <section id="social">
-        <h2>Let´s&nbsp;connect!&nbsp;&nbsp;&nbsp;</h2>
-        <div class="social-box">
+        <h2>Let´s&nbsp;&nbsp;connect!&nbsp;&nbsp;&nbsp;</h2>
+        <div id="social-box">
             <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
             <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
             <a href="https://codepen.io/FrederikeB"><img class="logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
