Change Classes to BEM Classes

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   </head>
 
   <body>
-    <header>
+    <header class="page__header">
       <h1>Frederike Bründermann</h1>
-      <nav>
-        <a href="#kontakt">KONTAKT</a>
+      <nav class="page__header-nav">
+        <a href="#footer__kontakt">KONTAKT</a>
         <a href="#bio">BIOGRAFIE</a>
        </nav>
     </header>
 
     <main>
-      <picture>
+      <picture class="portrait">
             <source media="(max-width: 599px)" src="images/FrederikeamSchreibtisch.JPG"/>
             <source media="(min-width 600px)" src="images/frederikemeer.JPG">
             <img src="images/frederikemeer.JPG" alt=""/>
       </picture>
      
-      <div>
-      <section id="interessen">
+      <div class="main__details">
+      <section class="details__interessen">
         <h2>Interessen</h2>
         <ul>
           <li>Digital Marketing</li>
@@ -37,7 +37,7 @@
         </ul>
       </section>
 
-        <section id="skills">
+        <section class="details__skills">
         <h2>Skills</h2>
         <ul>
           <li>Social Media Management</li>
@@ -49,7 +49,7 @@
       </section>
       </div>
 
-      <section id="bio">
+      <section class="details__bio">
         <h2>Biografie</h2>
         <p>
             Im Anschluss an mein Marketing- & Medienmanagment Studium bin ich in verschiedenen Agenturen tief in die Welt des On- und Offline Marketings eingetaucht. Thematisch habe ich in den letzten Jahren namhafte Kunden in den Bereichen Medizin, Fashion und Tourismus betreut. 
@@ -58,18 +58,18 @@
             Auf der Suche nach neuen beruflichen Herausforderungen und Perspektiven bin ich im Herbst 2020 auf <a href="https://www.neuefische.de" alt="" rel="noopener noreferrer" target="_blank"> neue fische </a> aufmerksam geworden. Mit Programmierung kam ich - bei E-Mail Newslettern, bei der Betreuung von Kunden Websites etc. - während meiner gesamten Laufbahn immer wieder in Kontakt. In der beruflichen Position zur Steuerung der Projekte und strategischer Beratung war jedoch, trotz großem Interesse, nie die Zeit sich tiefergehend mit der Materie zu beschäftigen, geschweige denn die Fähigkeiten zu lernen. Doch das ist nun anders! Ich nehme mir die Zeit mich in einem 3-monatigen Bootcamp zum Web Developer ausbilden zu lassen.<br> <br> <strong>Mein Ziel? - Marketing & Web Development verknüpfen, um die Synergieeffekte mit größtmöglichem Output zu nutzen!</strong>         </p>
       </section>
 
-      <section id="social">
+      <section class="main__social">
         <h2>Let´s&nbsp;&nbsp;connect!&nbsp;&nbsp;&nbsp;</h2>
-        <div id="social-box">
-            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
-            <a href="https://github.com/frederikebruendermann"><img class="logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
-            <a href="https://codepen.io/FrederikeB"><img class="logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
+        <div class="social__socialbox">
+            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="main__social--logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
+            <a href="https://github.com/frederikebruendermann"><img class="main__social--logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
+            <a href="https://codepen.io/FrederikeB"><img class="main__social--logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
         </div>
     </section>
 
-      <section id="cv">
+      <section class="main__cv">
         <h2>Lebenslauf</h2>
-        <dl>
+        <dl class="cv__dl">
             <dt>2019 - 2021</dt> 
             <dd>Project Manager Online Marketing </dd>
             <dd>@ justZARGEScommunicate!</dd><br>
@@ -98,7 +98,7 @@
             </dl>
       </section>
 
-        <section id="kontakt">
+        <section class="footer__kontakt">
             <h2>Kontakt</h2>
             <a href="mailto:frederike@bruendermann.de">✉️ frederike@bruendermann.de</a>
             <br />
