split CSS Styles to files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="main__details">
       <section class="details__interessen">
         <h2>Interessen</h2>
-        <ul>
+        <ul class="ul_square">
           <li>Digital Marketing</li>
           <li>Festivals & Konzerte</li>
           <li>Family & Friends</li>
@@ -39,7 +39,7 @@
 
         <section class="details__skills">
         <h2>Skills</h2>
-        <ul>
+        <ul class="ul_square">
           <li>Social Media Management</li>
           <li>Content Marketing</li>
           <li>Projekt Management</li>
@@ -51,7 +51,7 @@
 
       <section class="details__bio">
         <h2>Biografie</h2>
-        <p>
+        <p class="details__bio--f-10">
             Im Anschluss an mein Marketing- & Medienmanagment Studium bin ich in verschiedenen Agenturen tief in die Welt des On- und Offline Marketings eingetaucht. Thematisch habe ich in den letzten Jahren namhafte Kunden in den Bereichen Medizin, Fashion und Tourismus betreut. 
             <br>  
             <br> 
@@ -61,40 +61,40 @@
       <section class="main__social">
         <h2>Let´s&nbsp;&nbsp;connect!&nbsp;&nbsp;&nbsp;</h2>
         <div class="social__socialbox">
-            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="main__social--logo" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
-            <a href="https://github.com/frederikebruendermann"><img class="main__social--logo" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
-            <a href="https://codepen.io/FrederikeB"><img class="main__social--logo" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
+            <a href="https://www.linkedin.com/in/frederikebründermann/"><img class="main__social--logo-small" src="/images/linkedin-logo.png" alt="@ linkedin" rel="noopener noreferrer" target="_blank"/></a>
+            <a href="https://github.com/frederikebruendermann"><img class="main__social--logo-small" src="/images/github-logo.png" alt="@ github" rel="noopener noreferrer" target="_blank"/> </a>
+            <a href="https://codepen.io/FrederikeB"><img class="main__social--logo-small" src="/images/codepen-logo.png" alt="@ codepen" rel="noopener noreferrer" target="_blank"/></a>
         </div>
     </section>
 
       <section class="main__cv">
-        <h2>Lebenslauf</h2>
+        <h2 class="main__cv--h2">Lebenslauf</h2>
         <dl class="cv__dl">
-            <dt>2019 - 2021</dt> 
-            <dd>Project Manager Online Marketing </dd>
-            <dd>@ justZARGEScommunicate!</dd><br>
+            <dt class="cv__dl--dt">2019 - 2021</dt> 
+            <dd class="cv__dl--dd">Project Manager Online Marketing </dd>
+            <dd class="cv__dl--dd">@ justZARGEScommunicate!</dd><br>
 
-            <dt>2019<br></dt>
-            <dd>Senior Account Manager Fashion <br></dd>
-            <dd>@ Wiethe Group GmbH</dd><br>
+            <dt class="cv__dl--dt">2019<br></dt>
+            <dd class="cv__dl--dd">Senior Account Manager Fashion <br></dd>
+            <dd class="cv__dl--dd">@ Wiethe Group GmbH</dd><br>
 
-            <dt>2016 - 2018 <br></dt>
-            <dd>Social Media Managerin<br></dd>
-            <dd>@ VideoART GmbH</dd><br>
+            <dt class="cv__dl--dt">2016 - 2018 <br></dt>
+            <dd class="cv__dl--dd">Social Media Managerin<br></dd>
+            <dd class="cv__dl--dd">@ VideoART GmbH</dd><br>
 
-            <dt>2013 - 2015<br></dt>
-            <dd>Marketing Manager Marktplätze <br></dd>
-            <dd>@ Ulla Popken GmbH</dd><br>
+            <dt class="cv__dl--dt">2013 - 2015<br></dt>
+            <dd class="cv__dl--dd">Marketing Manager Marktplätze <br></dd>
+            <dd class="cv__dl--dd">@ Ulla Popken GmbH</dd><br>
 
-            <dt>2013 - 2015<br></dt>
-            <dd>Master Media Management <br> </dd>
-            <dd>& Entrepreneurship<br></dd>
-            <dd>@ Hochschule Fresenius</dd><br>
+            <dt class="cv__dl--dt">2013 - 2015<br></dt>
+            <dd class="cv__dl--dd">Master Media Management <br> </dd>
+            <dd class="cv__dl--dd">& Entrepreneurship<br></dd>
+            <dd class="cv__dl--dd">@ Hochschule Fresenius</dd><br>
 
-            <dt>2009 - 2012<br></dt>
-            <dd>Bachelor Busines Management <br> </dd>
-            <dd>& Marketing<br></dd>
-            <dd>@ Hochschule Mittweida</dd>
+            <dt class="cv__dl--dt">2009 - 2012<br></dt>
+            <dd class="cv__dl--dd">Bachelor Busines Management <br> </dd>
+            <dd class="cv__dl--dd">& Marketing<br></dd>
+            <dd class="cv__dl--dd">@ Hochschule Mittweida</dd>
             </dl>
       </section>
 
